--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,5 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.3.15", features = ["derive"] }
 dirs = "5.0.1"
+serde = { version = "1.0.171", features = ["derive"] }
+serde_json = "1.0.103"
