--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ clap = { version = "4.3.15", features = ["derive"] }
 dirs = "5.0.1"
 serde = { version = "1.0.171", features = ["derive"] }
 serde_json = "1.0.103"
+termion = "2.0.1"
