--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.3.15", features = ["derive"] }
 dirs = "5.0.1"
+mockall = "0.11.4"
 serde = { version = "1.0.171", features = ["derive"] }
 serde_json = "1.0.103"
+tempfile = "3.7.0"
 termion = "2.0.1"
