--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,10 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.3.15", features = ["derive"] }
+crossterm = "0.26.1"
 dirs = "5.0.1"
 mockall = "0.11.4"
 serde = { version = "1.0.171", features = ["derive"] }
 serde_json = "1.0.103"
 tempfile = "3.7.0"
-termion = "2.0.1"
+tui = "0.19.0"
