--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+assert_cmd = "2.0.12"
 clap = { version = "4.3.15", features = ["derive"] }
 crossterm = "0.26.1"
 dirs = "5.0.1"
 mockall = "0.11.4"
+predicates = "3.0.3"
 serde = { version = "1.0.171", features = ["derive"] }
 serde_json = "1.0.103"
 tempfile = "3.7.0"
