--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ crossterm = "0.26.1"
 dirs = "5.0.1"
 mockall = "0.11.4"
 predicates = "3.0.3"
+rand = "0.8.5"
 serde = { version = "1.0.171", features = ["derive"] }
 serde_json = "1.0.103"
 tempfile = "3.7.0"
