--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,6 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.75"
-assert_cmd = "2.0.12"
 clap = { version = "4.4.3", features = ["derive"] }
 crossterm = "0.27.0"
 dirs = "5.0.1"
@@ -18,3 +17,6 @@ serde = { version = "1.0.188", features = ["derive"] }
 serde_json = "1.0.107"
 tempfile = "3.8.0"
 tui = "0.19.0"
+
+[dev-dependencies]
+assert_cmd = "2.0.12"
