--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ serde = { version = "1.0.188", features = ["derive"] }
 serde_json = "1.0.107"
 tempfile = "3.8.0"
 ratatui = "0.23"
-
+csv = "1.3.0"
+chrono = { version = "0.4.31", features = ["serde"]}
 [dev-dependencies]
 assert_cmd = "2.0.12"
