--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,5 +19,6 @@ tempfile = "3.8.0"
 ratatui = "0.23.0"
 csv = "1.3.0"
 chrono = { version = "0.4.31", features = ["serde"]}
+random_str = "0.1.2"
 [dev-dependencies]
 assert_cmd = "2.0.12"
